# multimedia_av_codec_mirror

./: .gitattributes  .gitignore  1.diff  1698.diff  7012.diff  7827.patch  7840.patch  OAT.xml  README_zh.md  av_codec.diff  avcodec_change.patch  bundle.json  cfi_blocklist.txt  config.gni  hisysevent.yaml
interfaces/kits/c/: BUILD.gn  avcodec_audio_channel_layout.h  native_avcapability.h  native_avcodec_audiocodec.h  native_avcodec_audiodecoder.h  native_avcodec_base.h  native_avcodec_media_codec.h  native_avcodec_video_codec.h  native_avcodec_videodecoder.h  native_avcodec_videoencoder.h  native_avdemuxer.h  native_avformat.h  native_avmuxer.h  native_avsource.h  native_cencinfo.h  native_video_codec.h
services/: BUILD.gn  avcodec_dfx.cpp
services/dfx/: BUILD.gn  avcodec_bitstream_dump.cpp  avcodec_dfx.cpp  avcodec_dfx_component.cpp  avcodec_dump_utils.cpp  avcodec_log_tag.cpp  avcodec_sysevent.cpp  avcodec_xcollie.cpp
services/dfx/include/: avcodec_dfx.h  avcodec_dfx_component.h  avcodec_dump_utils.h  avcodec_log.h  avcodec_log_ex.h  avcodec_log_tag.h  avcodec_sysevent.h  avcodec_trace.h  avcodec_xcollie.h
services/drm_decryptor/: codec_drm_decrypt.cpp  codec_drm_decrypt.h
services/engine/: BUILD.gn
services/engine/base/: BUILD.gn  codecbase.cpp  codecbase_adapter.cpp
services/engine/codec/: BUILD.gn
services/engine/codeclist/: BUILD.gn  audio_codeclist_info.cpp  audio_codeclist_info.h  codec_ability_singleton.cpp  codec_ability_singleton.h  codec_capability_helper.cpp  codec_capability_helper.h  codeclist_builder.cpp  codeclist_builder.h  codeclist_core.cpp  codeclist_core.h  codeclist_dump.cpp  codeclist_utils.h
services/engine/common/: BUILD.gn  codec_utils.cpp  dma_swap.cpp  ffmpeg_converter.cpp  fsurface_memory.cpp  surface_memory.cpp
services/engine/demuxer/: demuxer_engine_impl.cpp  demuxer_engine_impl.h
services/engine/muxer/: muxer_buffer_pool.cpp  muxer_engine_impl.cpp
services/engine/plugin/: BUILD.gn
services/engine/source/: ffmpeg_format_helper.cpp  ffmpeg_format_helper.h  ffmpeg_metadata_helper.cpp  ffmpeg_metadata_helper.h  source.cpp  source.h  source_engine_impl.cpp  source_engine_impl.h
services/etc/: BUILD.gn  av_codec_service.cfg  process.cfg  sa_profile.json
services/etc/on_demand/: process.cfg  sa_profile.json
services/include/: i_avcodec_service.h  i_codec_service.h  i_codeclist_service.h  i_media_codec_service.h
services/media_engine/: BUILD.gn
services/media_engine/filters/: BUILD.gn  audio_capture_filter.cpp  audio_data_source_filter.cpp  audio_decoder_adapter.cpp  audio_decoder_filter.cpp  audio_encoder_filter.cpp  audio_sink_filter.cpp  codec_capability_adapter.cpp  codec_capability_filter.cpp  codec_filter.cpp  decoder_surface_filter.cpp  decoder_surface_filter_backup.cpp  decoder_surface_filter_bak.cpp  demuxer_filter.cpp  encoder_filter.cpp  fdsan_fd.cpp  metadata_filter.cpp  muxer_filter.cpp  muxer_filter_bak.cpp  sei_parser.cpp  sei_parser_filter.cpp  sei_parser_helper.cpp  subtitle_sink_filter.cpp  surface_decoder_adapter.cpp  surface_decoder_adapter.h  surface_decoder_adapter_bak.cpp  surface_decoder_filter.cpp  surface_decoder_filter_bak.cpp  surface_encoder_adapter.cpp  surface_encoder_adapter.h  surface_encoder_filter.cpp  video_capture_filter.cpp  video_decoder_adapter.cpp  video_resize_filter.cpp
services/media_engine/modules/: BUILD.gn
services/media_engine/plugins/: BUILD.gn
services/services/: BUILD.gn
services/services/common/: avsharedmemory_ipc.cpp  config_json_parser.cpp  config_json_parser.h  instance_info.h  waterline_manager.cpp  waterline_manager.h
services/services/factory/: i_demuxer_engine.h  i_muxer_engine.h  i_source_engine.h
services/services/sa_avcodec/: BUILD.gn
services/utils/: BUILD.gn  avsharedmemorybase.cpp  format.cpp  surface_tools.cpp  surface_utils.cpp  task_thread.cpp
services/utils/include/: avsharedmemorybase.h  block_queue.h  surface_tools.h  surface_utils.h  task_thread.h
test/: BUILD.gn  BUILD1.gn
test/fuzztest/asyncresourcecapidec_fuzzer/: BUILD.gn  asyncresourcedec_fuzzer.cpp
test/fuzztest/asyncresourcecapienc_fuzzer/: BUILD.gn  asyncresourceenc_fuzzer.cpp
test/fuzztest/audiodecoderConfigure_fuzzer/: BUILD.gn  audiodecoderConfigure_fuzzer.cpp
test/fuzztest/audiodecoderSetParameter_fuzzer/: BUILD.gn  audiodecoderSetParameter_fuzzer.cpp
test/fuzztest/audiodecoder_fuzzer/: BUILD.gn  audioDecoder_fuzzer.cpp  audio_decoder_demo.cpp  audio_decoder_demo.h  audiodecoder_fuzzer.cpp
test/fuzztest/audiodecoderaac_fuzzer/: BUILD.gn  audio_decoder_aac_demo.cpp  audio_decoder_aac_new_demo.cpp  audio_decoder_aac_new_demo.h  audiodecoderaac_fuzzer.cpp
test/fuzztest/audiodecoderadapter_fuzzer/: BUILD.gn  audio_decoderadapter_fuzzer.cpp  audio_decoderadapter_fuzzer.h
test/fuzztest/audiodecoderamrnb_fuzzer/: BUILD.gn  audio_decoder_amrnb_demo.cpp  audio_decoder_amrnb_new_demo.cpp  audio_decoder_amrnb_new_demo.h  audiodecoderamrnb_fuzzer.cpp
test/fuzztest/audiodecoderamrwb_fuzzer/: BUILD.gn  audio_decoder_amrwb_demo.cpp  audio_decoder_amrwb_new_demo.cpp  audio_decoder_amrwb_new_demo.h  audiodecoderamrwb_fuzzer.cpp
test/fuzztest/audiodecoderape_fuzzer/: BUILD.gn  audio_decoder_ape_demo.cpp  audio_decoder_ape_new_demo.cpp  audio_decoder_ape_new_demo.h  audiodecoderape_fuzzer.cpp
test/fuzztest/audiodecoderbase_fuzzer/: audio_decoder_base_new_demo.cpp  audio_decoder_base_new_demo.h  project.xml
test/fuzztest/audiodecoderconfigure_fuzzer/: BUILD.gn  audiodecoderConfigure_fuzzer.cpp
test/fuzztest/audiodecodercook_fuzzer/: BUILD.gn  audio_decoder_cook_demo.cpp  audio_decoder_cook_demo.h  audiodecodercook_fuzzer.cpp
test/fuzztest/audiodecoderdescription_fuzzer/: BUILD.gn  audio_decoder_description_demo.cpp  audio_decoder_description_demo.h  audio_decoder_description_fuzzer.cpp
test/fuzztest/audiodecoderdts_fuzzer/: BUILD.gn  audio_decoder_dts_demo.cpp  audio_decoder_dts_demo.h  audiodecoderdts_fuzzer.cpp
test/moduletest/: .gitattributes
test/nativedemo/: BUILD.gn  av_codec_demo.cpp
test/unittest/: BUILD.gn
(+4415 files in other folders)
