# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

group("av_codec_services_package") {
  deps = [
    "etc:av_codec_service.cfg",
    "services:av_codec_service",
    "utils:av_codec_service_utils",
    "media_engine:av_codec_media_engine_package",
  ]
  if (av_codec_support_hcodec) {
    deps += [
      "engine/codec/video/hcodec:hcodec",
      "media_engine/modules/codec/video_adapter/hcodec_adapter:hcodec_adapter",
    ]
  }
}
