# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

group("av_codec_demo_test") {
  testonly = true
  deps = []
  if (av_codec_support_test && !use_libfuzzer) {
    deps += [ "nativedemo:av_codec_demo" ]
    deps += [ "unittest/video_test/video_test:video_codec_demo" ]
  }
}

group("av_codec_unit_test") {
  testonly = true
  deps = []
  if (!use_libfuzzer) {
    if (av_codec_support_test) {
      deps += [
        "unittest/audio_capture_test:audio_capture_module_unit_test",
        "unittest/audio_capture_unittest:audio_capture_module_unittest",
        "unittest/audio_data_source_filter_unittest:audio_data_source_filter_unittest",
        "unittest/audio_decoder_filter_callback_unittest:audio_decoder_filter_callback_unittest",
        "unittest/audio_decoder_filter_unittest:audio_decoder_filter_unittest",
        "unittest/audio_encoder_filter_test:audio_encoder_filter_optimize_unitest",
        "unittest/audio_encoder_filter_test:audio_encoder_filter_unitest",
        "unittest/audio_encoder_filter_unittest:audio_encoder_filter_unittest",
        "unittest/audio_sampleformat_unittest:audio_sampleformat_unittest",
        "unittest/audio_server_sink_plugin_unittest:audio_server_sink_plugin_unittest",
        "unittest/audio_sink_filter_unittest:audio_sink_filter_unittest",
        "unittest/audio_sink_unit_test:av_audio_sink_test",
        "unittest/audio_test:audio_codec_inner_avbuffer_unit_test",
        "unittest/audio_test:audio_decoder_plugin_unit_test",
        "unittest/audio_test:audio_encoder_plugin_unit_test",
        "unittest/audio_test:audio_ffmpeg_base_codec_unit_test",
        "unittest/audio_test:audio_g711mu_encoder_plugin_unit_test",
        "unittest/audio_test:audio_g711a_decoder_unit_test",
        "unittest/audio_test:audio_hdi_codec_inner_unit_test",
        "unittest/audio_test:audio_lbvc_plugin_unit_test",
        "unittest/audio_test:audio_resample_unit_test",
        "unittest/audio_test:audio_raw_decoder_plugin_unit_test",
        "unittest/audio_test:audio_sync_mode_capi_unit_test",
        "unittest/audio_test:audio_sync_mode_gsm_capi_unit_test",
        "unittest/audio_test:audio_sync_mode_gsm_ms_capi_unit_test",
        "unittest/audio_test:audio_sync_mode_truehd_capi_unit_test",
        "unittest/audio_test:audio_truehd_capi_decoder_unit_stable_test",
        "unittest/audio_test:audio_truehd_decoder_unit_test",
        "unittest/audio_test:audio_truehd_decoder_capi_unit_test",
        "unittest/audio_test:av_audio_capi_unit_test",
        "unittest/audio_test:av_audio_codecbase_unit_test",
        "unittest/audio_test:av_audio_decode_ability_unit_test",
        "unittest/audio_test:av_audio_decoder_avbuffer_capi_unit_test",
        "unittest/audio_test:av_audio_encoder_avbuffer_capi_unit_test",
        "unittest/audio_test:av_audio_encoder_capi_unit_test",
        "unittest/audio_test:av_audio_inner_unit_test",
        "unittest/audio_test:av_audio_media_codec_unit_test",
        "unittest/audio_test:audio_sync_codec_adapter_unit_test",
        "unittest/audio_test:audio_gsm_ms_decoder_unit_test",
        "unittest/audio_test:audio_gsm_ms_capi_decoder_unit_test",
        "unittest/audio_test:audio_gsm_decoder_unit_test",
        "unittest/audio_test:audio_gsm_capi_decoder_unit_test",
        "unittest/audio_test:audio_alac_decoder_unit_test",
        "unittest/audio_test:audio_wma_decoder_unit_test",
        "unittest/audio_test:audio_adpcm_decoder_unit_test",
        "unittest/audio_test:audio_ilbc_decoder_unit_test",
        "unittest/avcenc_info_test:avcenc_info_capi_unit_test",
        "unittest/avmuxer_test:avmuxer_capi_unit_test",
        "unittest/avmuxer_test:avmuxer_inner_unit_test",
        "unittest/avsource_test:avsource_capi_unit_test",
        "unittest/avsource_test:avsource_inner_unit_test",
        "unittest/calc_max_amplitude_unittest:calc_max_amplitude_unittest",
        "unittest/codec_capability_adapter_unittest:codec_capability_adapter_unittest",
        "unittest/dash_media_downloader_unittest:dash_media_downloader_unittest",
        "unittest/dash_mpd_downloader_unittest:dash_mpd_downloader_unittest",
        "unittest/dash_mpd_manager_unittest:dash_mpd_manager_unittest",
        "unittest/dash_mpd_node_unittest:dash_mpd_node_unittest",
        "unittest/dash_mpd_parser_unittest:dash_mpd_parser_unittest",
        "unittest/dash_mpd_util_unittest:dash_mpd_util_unittest",
        "unittest/dash_mult_seg_base_node_unittest:dash_mult_seg_base_node_unittest",
        "unittest/dash_period_manager_unittest:dash_period_manager_unit_test",
        "unittest/dash_period_node_unittest:dash_period_node_unittest",
        "unittest/dash_representation_manager_unittest:dash_representation_manager_unittest",
        "unittest/dash_seg_list_node_unittest:dash_seg_list_node_unittest",
        "unittest/dash_seg_template_node_unittest:dash_seg_template_node_unittest",
        "unittest/dash_test:dash_adpt_set_manager_unit_test",
        "unittest/dash_test:dash_media_downloader_unit_test",
        "unittest/dash_test:dash_mpd_downloader_unit_test",
        "unittest/dash_test:dash_mpd_parser_unit_test",
        "unittest/dash_test:dash_segment_downloader_unit_test",
        "unittest/dash_test:dash_xml_unit_test",
        "unittest/dash_test:histream_dash_mpd_parser_unittest",
        "unittest/dash_test:sidx_box_parser_unittest",
        "unittest/dash_unittest:dash_segment_downloader_unittest",
        "unittest/decoder_filter_test:decoder_filter_unit_test",
        "unittest/decoder_surface_filter_unittest:decoder_surface_filter_unittest",
        "unittest/demuxer_filter_unittest:demuxer_filter_unittest",
        "unittest/demuxer_plugin_test:demuxer_plugin_unit_test",
        "unittest/demuxer_test:demuxer_capi_buffer_unit_test",
        "unittest/demuxer_test:demuxer_capi_unit_test",
        "unittest/demuxer_test:demuxer_inner_buffer_unit_test",
        "unittest/demuxer_test:demuxer_inner_unit_test",
        "unittest/demuxer_unit_test:demuxer_unit_test",
        "unittest/filter_test:filter_unit_test",
        "unittest/hls_test:hls_media_downloader_unit_test",
        "unittest/hls_test:hls_segment_manager_unit_test",
        "unittest/hls_test:hls_playlist_downloader_unit_test",
        "unittest/hls_test:hls_tags_unit_test",
        "unittest/hls_test:m3u8_unit_test",
        "unittest/http_source_test:downloader_unit_test",
        "unittest/http_source_test:http_media_downloader_unit_test",
        "unittest/http_source_test:http_source_plugin_unit_test",
        "unittest/http_source_test:http_source_plugin_unittest",
        "unittest/http_source_test:xml_element_unittest",
        "unittest/http_source_test:xml_parser_unittest",
        "unittest/media_demuxer_ext_test:media_demuxer_ext_unit_test",
        "unittest/media_demuxer_pts_functions_unittest:media_demuxer_pts_functions_unittest",
        "unittest/media_demuxer_test:media_demuxer_unit_test",
        "unittest/media_engine/filters:media_engine_filter_unit_test",
        "unittest/media_sink_test:av_audio_sink_unit_test",
        "unittest/media_synchronous_sink_unittest:media_synchronous_sink_unittest",
        "unittest/media_sync_manager_unittest:media_sync_manager_unittest",
        "unittest/metadata_filter_unittest:metadata_filter_unittest",
        "unittest/plugins_source_test:plugins_source_unit_test",
        "unittest/post_processor_test:post_processor_unit_test",
        "unittest/pts_and_index_conversion_test:pts_and_index_conversion_unit_test",
        "unittest/pts_and_index_conversion_unittest:pts_and_index_conversion_unittest",
        "unittest/reference_parser_test:reference_parser_inner_unit_test",
        "unittest/sample_queue_test:sample_queue_unit_test",
        "unittest/sample_queue_unit_test:sample_queue_test",
        "unittest/sei_parser_filter_unittest:sei_parser_filter_unittest",
        "unittest/sei_parser_helper_unittest:sei_parser_helper_unittest",
        "unittest/source_test:source_unit_test",
        "unittest/source_unit_test:source_test",
        "unittest/stream_demuxer_unittest:stream_demuxer_unittest",
        "unittest/subtitle_sink_filter_unittest:subtitle_sink_filter_unittest",
        "unittest/subtitle_sink_unittest:subtitle_sink_unittest",
        "unittest/surface_decoder_adapter_unittest:surface_decoder_adapter_unittest",
        "unittest/surface_decoder_filter_unittest:surface_decoder_filter_unittest",
        "unittest/surface_encoder_adapter_unittest:surface_encoder_adapter_unittest",
        "unittest/surface_encoder_filter_unittest:surface_encoder_filter_unittest",
        "unittest/video_capture_filter_unittest:video_capture_filter_unittest",
        "unittest/video_resize_filter_test:video_resize_filter_test",
        "unittest/video_sink_unittest:video_sink_unittest",
      ]
      if (av_codec_support_hcodec) {
        deps += [ "unittest/hcodec_test:hcodec_unit_test" ]
      }
      if(av_codec_enable_codec_eac3) {
        deps += [ "unittest/audio_test:audio_eac3_decoder_unit_test" ]
        deps += [ "unittest/audio_test:audio_eac3_decoder_capi_unit_test" ]
        deps += [ "unittest/audio_test:audio_sync_mode_eac3_capi_unit_test" ]
      }
      if (av_codec_enable_special_codec) {
        deps += [
          "unittest/audio_vivid_test:audio_vivid_ability_unit_test",
          "unittest/audio_vivid_test:audio_vivid_capi_unit_test",
          "unittest/audio_vivid_test:audio_vivid_inner_unit_test",
        ]
      }
    }
  }
}

group("av_codec_module_test") {
  testonly = true
  deps = []
  if (av_codec_support_test && !use_libfuzzer) {
    deps += [
      "moduletest/audio_decoder:audio_decoder_module_test",
      "moduletest/audio_encoder:audio_encoder_module_test",
      "moduletest/capability:capability_module_test",
      "moduletest/demuxer:demuxer_native_module_test",
      "moduletest/muxer:muxer_native_module_test",
      "moduletest/vcodec/encoder:encoder_native_module_test",
      "moduletest/vcodec/h263swdecoder:h263swdecoder_native_module_test",
      "moduletest/vcodec/wmv3swdecoder:wmv3swdecoder_native_module_test",
      "moduletest/vcodec/hdrcodec:hdrcodec_native_module_test",
      "moduletest/vcodec/avcswencoder:avcswencoder_native_module_test",
      "moduletest/vcodec/hevcswdecoder:hevcswdecoder_native_module_test",
      "moduletest/vcodec/hwdecoder:hwdecoder_native_module_test",
      "moduletest/vcodec/mpeg2swdecoder:mpeg2swdecoder_native_module_test",
      "moduletest/vcodec/mpeg4swdecoder:mpeg4swdecoder_native_module_test",
      "moduletest/vcodec/swdecoder:swdecoder_native_module_test",
      "moduletest/vcodec/msvideo1decoder:msvideo1decoder_native_module_test",
      "moduletest/vcodec/mjpegswdecoder:mjpegswdecoder_native_module_test",
    ]
    if (av_codec_support_vc1_decoder) {
      deps += [ "moduletest/vcodec/vc1decoder:vc1decoder_native_module_test" ]
    }
  }
}

group("av_codec_fuzz_test") {
  testonly = true
  deps = []
  if (av_codec_support_test) {
    deps += [
      "fuzztest/audiodecodertruehd_fuzzer:AudioDecoderTruehdFuzzTest",
      "fuzztest/audiodecoder_fuzzer:AudioDecoderFuzzTest",
      "fuzztest/audiodecoderaac_fuzzer:AudioDecoderAacFuzzTest",
      "fuzztest/audiodecoderamrnb_fuzzer:AudioDecoderAmrnbFuzzTest",
      "fuzztest/audiodecoderamrwb_fuzzer:AudioDecoderAmrwbFuzzTest",
      "fuzztest/audiodecoderape_fuzzer:AudioDecoderApeFuzzTest",
      "fuzztest/audiodecoderconfigure_fuzzer:AudiodecoderConfigureFuzzTest",
      "fuzztest/audiodecoderflac_fuzzer:AudioDecoderFlacFuzzTest",
      "fuzztest/audiodecoderflush_fuzzer:AudioDecoderFlushFuzzTest",
      "fuzztest/audiodecodergsm_ms_fuzzer:AudioDecoderGsm_MsFuzzTest",
      "fuzztest/audiodecoderg711a_fuzzer:AudioDecoderG711AFuzzTest",
      "fuzztest/audiodecoderg711_fuzzer:AudioDecoderG711FuzzTest",
      "fuzztest/audiodecoderheaac_fuzzer:AudioDecoderHEAacFuzzTest",
      "fuzztest/audiodecoderhev2aac_fuzzer:AudioDecoderHEV2AacFuzzTest",
      "fuzztest/audiodecoderilbc_fuzzer:AudioDecoderIlbcFuzzTest",
      "fuzztest/audiodecodermp3_fuzzer:AudioDecoderMp3FuzzTest",
      "fuzztest/audiodecoderopus_fuzzer:AudioDecoderOpusFuzzTest",
      "fuzztest/audiodecoderpreapi_fuzzer:AudioDecoderpreapiFuzzTest",
      "fuzztest/audiodecoderreset_fuzzer:AudioDecoderResetFuzzTest",
      "fuzztest/audiodecodersetparameter_fuzzer:AudiodecoderSetParameterFuzzTest",
      "fuzztest/audiodecodervivid48k1chis_fuzzer:AudioDecoderVivid48k1cHisFuzzTest",
      "fuzztest/audiodecodervivid48k2chis_fuzzer:AudioDecoderVivid48k2cHisFuzzTest",
      "fuzztest/audiodecodervivid48k6c2ohis_fuzzer:AudioDecoderVivid48k6c2oHisFuzzTest",
      "fuzztest/audiodecodervivid48k6chis_fuzzer:AudioDecoderVivid48k6cHisFuzzTest",
      "fuzztest/audiodecodervivid48khoahis_fuzzer:AudioDecoderVivid48khoaHisFuzzTest",
      "fuzztest/audiodecodervivid96k1chis_fuzzer:AudioDecoderVivid96k1cHisFuzzTest",
      "fuzztest/audiodecodervivid96k2chis_fuzzer:AudioDecoderVivid96k2cHisFuzzTest",
      "fuzztest/audiodecodervivid96k6c2ohis_fuzzer:AudioDecoderVivid96k6c2oHisFuzzTest",
      "fuzztest/audiodecodervivid96k6chis_fuzzer:AudioDecoderVivid96k6cHisFuzzTest",
      "fuzztest/audiodecodervivid96khoahis_fuzzer:AudioDecoderVivid96khoaHisFuzzTest",
      "fuzztest/audiodecodervivid_fuzzer:AudioDecoderVividFuzzTest",
      "fuzztest/audiodecodervividhis_fuzzer:AudioDecoderVividHisFuzzTest",
      "fuzztest/audiodecodervorbis_fuzzer:AudioDecoderVorbisFuzzTest",
      "fuzztest/audiodecodergsm_fuzzer:AudioDecoderGsmFuzzTest",
      "fuzztest/audioencoder_fuzzer:AudioencoderFuzzTest",
      "fuzztest/audioencoderaac_fuzzer:AudioencoderAacFuzzTest",
      "fuzztest/audioencoderamrnb_fuzzer:AudioencoderAmrnbFuzzTest",
      "fuzztest/audioencoderamrwb_fuzzer:AudioencoderAmrwbFuzzTest",
      "fuzztest/audioencoderflac_fuzzer:AudioencoderFlacFuzzTest",
      "fuzztest/audioencoderflush_fuzzer:AudioEncoderFlushFuzzTest",
      "fuzztest/audioencoderg711_fuzzer:AudioencoderG711FuzzTest",
      "fuzztest/audioencoderheaac_fuzzer:AudioencoderHEAacFuzzTest",
      "fuzztest/audioencoderhev2aac_fuzzer:AudioencoderHEV2AacFuzzTest",
      "fuzztest/audioencodermp3_fuzzer:AudioencoderMp3FuzzTest",
      "fuzztest/audioencoderopus_fuzzer:AudioencoderOpusFuzzTest",
      "fuzztest/audioencoderpreapi_fuzzer:AudioencoderpreapiFuzzTest",
      "fuzztest/audioencoderreset_fuzzer:AudioEncoderResetFuzzTest",
      "fuzztest/audiomuxeraac2_fuzzer:AudioMuxerAac2FuzzTest",
      "fuzztest/audiomuxeraac_fuzzer:AudioMuxerAacFuzzTest",
      "fuzztest/audiomuxeramrnb_fuzzer:AudioMuxerAmrnbFuzzTest",
      "fuzztest/audiomuxeramrwb_fuzzer:AudioMuxerAmrwbFuzzTest",
      "fuzztest/audiomuxerhevc_fuzzer:AudioMuxerHevcFuzzTest",
      "fuzztest/audiomuxerjpg_fuzzer:AudioMuxerJpgFuzzTest",
      "fuzztest/audiomuxermeta_fuzzer:AudioMuxerMetaFuzzTest",
      "fuzztest/audiomuxermp3_fuzzer:AudioMuxerMp3FuzzTest",
      "fuzztest/avcapability_fuzzer:AvcapabilityFuzzTest",
      "fuzztest/avcencinfo_fuzzer:AvCencInfoFuzzTest",
      "fuzztest/audiomuxerflac_fuzzer:AudioMuxerFlacFuzzTest",
      "fuzztest/avcodecsuspend_fuzzer:AvcodecSuspendFuzzTest",
      "fuzztest/avsourcefunc_fuzzer:AvSourceFuncFuzzTest",
      "fuzztest/demuxer_fuzzer:DemuxerFuzzTest",
      "fuzztest/demuxerinnerfunc_fuzzer:DemuxerInnerFuncFuzzTest",
      "fuzztest/demuxeraac_fuzzer:DemuxerAacFuzzTest",
      "fuzztest/demuxeraacapi11_fuzzer:DemuxerAacAPI11FuzzTest",
      "fuzztest/demuxeramr_fuzzer:DemuxerAmrFuzzTest",
      "fuzztest/demuxeramrapi11_fuzzer:DemuxerAmrAPI11FuzzTest",
      "fuzztest/demuxerape_fuzzer:DemuxerApeFuzzTest",
      "fuzztest/demuxerapeapi11_fuzzer:DemuxerApeAPI11FuzzTest",
      "fuzztest/demuxerapi11_fuzzer:DemuxerAPI11FuzzTest",
      "fuzztest/demuxeravi_fuzzer:DemuxerAviFuzzTest",
      "fuzztest/demuxeraviapi11_fuzzer:DemuxerAviAPI11FuzzTest",
      "fuzztest/demuxereac3api11_fuzzer:DemuxerEac3API11FuzzTest",
      "fuzztest/demuxerflac_fuzzer:DemuxerFlacFuzzTest",
      "fuzztest/demuxerflacapi11_fuzzer:DemuxerFlacAPI11FuzzTest",
      "fuzztest/demuxerflv_fuzzer:DemuxerFlvFuzzTest",
      "fuzztest/demuxerflvapi11_fuzzer:DemuxerFlvAPI11FuzzTest",
      "fuzztest/demuxerm2tsapi11_fuzzer:DemuxerM2tsAPI11FuzzTest",
      "fuzztest/demuxerm3u8_fuzzer:DemuxerM3u8FuzzTest",
      "fuzztest/demuxerm3u8api11_fuzzer:DemuxerM3u8API11FuzzTest",
      "fuzztest/demuxerm4a_fuzzer:DemuxerM4aFuzzTest",
      "fuzztest/demuxerm4aapi11_fuzzer:DemuxerM4aAPI11FuzzTest",
      "fuzztest/demuxermkv_fuzzer:DemuxerMkvFuzzTest",
      "fuzztest/demuxermkvapi11_fuzzer:DemuxerMkvAPI11FuzzTest",
      "fuzztest/demuxermov_fuzzer:DemuxerMovFuzzTest",
      "fuzztest/demuxermovapi11_fuzzer:DemuxerMovAPI11FuzzTest",
      "fuzztest/demuxermp4auxl_fuzzer:DemuxerMp4AuxlFuzzTest",
      "fuzztest/demuxermp3_fuzzer:DemuxerMp3FuzzTest",
      "fuzztest/demuxermp3api11_fuzzer:DemuxerMp3API11FuzzTest",
      "fuzztest/demuxermpg_fuzzer:DemuxerMpgFuzzTest",
      "fuzztest/demuxermpgapi11_fuzzer:DemuxerMpgAPI11FuzzTest",
      "fuzztest/demuxermtsapi11_fuzzer:DemuxerMtsAPI11FuzzTest",
      "fuzztest/demuxerogg_fuzzer:DemuxerOggFuzzTest",
      "fuzztest/demuxeroggapi11_fuzzer:DemuxerOggAPI11FuzzTest",
      "fuzztest/demuxerpluginflv_fuzzer:DemuxerPluginFlvFuzzTest",
      "fuzztest/demuxerpluginaac_fuzzer:DemuxerPluginAacFuzzTest",
      "fuzztest/demuxerpluginamr_fuzzer:DemuxerPluginAmrFuzzTest",
      "fuzztest/demuxerpluginape_fuzzer:DemuxerPluginApeFuzzTest",
      "fuzztest/demuxerpluginavi_fuzzer:DemuxerPluginAviFuzzTest",
      "fuzztest/demuxerplugineac3_fuzzer:DemuxerPluginEac3FuzzTest",
      "fuzztest/demuxerpluginflac_fuzzer:DemuxerPluginFlacFuzzTest",
      "fuzztest/demuxerpluginflvtest_fuzzer:DemuxerPluginFlvtestFuzzTest",
      "fuzztest/demuxerpluginfmp4_fuzzer:DemuxerPluginFmp4FuzzTest",
      "fuzztest/demuxerpluginm4a_fuzzer:DemuxerPluginM4aFuzzTest",
      "fuzztest/demuxerpluginmkv_fuzzer:DemuxerPluginMkvFuzzTest",
      "fuzztest/demuxerpluginmov_fuzzer:DemuxerPluginMovFuzzTest",
      "fuzztest/demuxerpluginmp3_fuzzer:DemuxerPluginMp3FuzzTest",
      "fuzztest/demuxerpluginmp4_fuzzer:DemuxerPluginMp4FuzzTest",
      "fuzztest/demuxerpluginmpegts_fuzzer:DemuxerPluginMpegtsFuzzTest",
      "fuzztest/demuxerpluginmpg_fuzzer:DemuxerPluginMpgFuzzTest",
      "fuzztest/demuxerpluginogg_fuzzer:DemuxerPluginOggFuzzTest",
      "fuzztest/demuxerpluginsrt_fuzzer:DemuxerPluginSrtFuzzTest",
      "fuzztest/demuxerpluginvtt_fuzzer:DemuxerPluginVttFuzzTest",
      "fuzztest/demuxerpluginwav_fuzzer:DemuxerPluginWavFuzzTest",
      "fuzztest/demuxerpluginwebm_fuzzer:DemuxerPluginWebmFuzzTest",
      "fuzztest/demuxerpluginwma_fuzzer:DemuxerPluginWmaFuzzTest",
      "fuzztest/demuxerpluginmanager_fuzzer:DemuxerPluginManagerFuzzTest",
      "fuzztest/demuxersrt_fuzzer:DemuxerSrtFuzzTest",
      "fuzztest/demuxersrtapi11_fuzzer:DemuxerSrtAPI11FuzzTest",
      "fuzztest/demuxertrpapi11_fuzzer:DemuxerTrpAPI11FuzzTest",
      "fuzztest/demuxerts_fuzzer:DemuxerTsFuzzTest",
      "fuzztest/demuxertsapi11_fuzzer:DemuxerTsAPI11FuzzTest",
      "fuzztest/demuxervivid_fuzzer:DemuxerVividFuzzTest",
      "fuzztest/demuxervividmp4_fuzzer:DemuxerVividMp4FuzzTest",
      "fuzztest/demuxervividts_fuzzer:DemuxerVividTsFuzzTest",
      "fuzztest/demuxervtt_fuzzer:DemuxerVttFuzzTest",
      "fuzztest/demuxervttapi11_fuzzer:DemuxerVttAPI11FuzzTest",
      "fuzztest/demuxerwav_fuzzer:DemuxerWavFuzzTest",
      "fuzztest/demuxerwavapi11_fuzzer:DemuxerWavAPI11FuzzTest",
      "fuzztest/demuxerwebmapi11_fuzzer:DemuxerWebmAPI11FuzzTest",
      "fuzztest/demuxerwmaapi11_fuzzer:DemuxerWmaAPI11FuzzTest",
      "fuzztest/drmdecryptor_fuzzer:DrmDecryptorFuzzTest",
      "fuzztest/encoderapi10h264_fuzzer:EncoderAPI10H264FuzzTest",
      "fuzztest/encoderapi10h26510bit_fuzzer:EncoderAPI10H26510BitFuzzTest",
      "fuzztest/encoderapi10h2658bit_fuzzer:EncoderAPI10H2658BitFuzzTest",
      "fuzztest/encoderapi11_fuzzer:EncoderAPI11FuzzTest",
      "fuzztest/encoderapi11h26510bit_fuzzer:EncoderAPI11H26510BitFuzzTest",
      "fuzztest/encoderapi11h2658bit_fuzzer:EncoderAPI11H2658BitFuzzTest",
      "fuzztest/encoderapi11h265bframe10bit_fuzzer:EncoderAPI11H265BFrame10BitFuzzTest",
      "fuzztest/encoderapi11h265bframe8bit_fuzzer:EncoderAPI11H265BFrame8BitFuzzTest",
      "fuzztest/encoderconfigure_fuzzer:EncoderConfigureFuzzTest",
      "fuzztest/encoderinner_fuzzer:EncoderInnerFuzzTest",
      "fuzztest/encodersetparameter_fuzzer:EncoderSetParameterFuzzTest",
      "fuzztest/fcodecsurfaceconfigure_fuzzer:FCodecSurfaceConfigureFuzzTest",
      "fuzztest/h263swdecoderconfigure_fuzzer:H263SwdecoderConfigureFuzzTest",
      "fuzztest/h263swdecoderresource_fuzzer:H263SwdecoderResourceFuzzTest",
      "fuzztest/h263swdecoderserver_fuzzer:H263SwdecoderServerFuzzTest",
      "fuzztest/h263swdecodersetparameter_fuzzer:H263SwdecoderSetParameterFuzzTest",
      "fuzztest/mjpegdecoderinner_fuzzer:MjpegdecoderInnerFuzzTest",
      "fuzztest/mjpegswdecoderconfigure_fuzzer:MjpegSwdecoderConfigureFuzzTest",
      "fuzztest/mjpegswdecoderresource_fuzzer:MjpegSwdecoderResourceFuzzTest",
      "fuzztest/mjpegswdecoderserver_fuzzer:MjpegSwdecoderServerFuzzTest",
      "fuzztest/mjpegswdecodersetparameter_fuzzer:MjpegSwdecoderSetParameterFuzzTest",
      "fuzztest/hdrmuxer_fuzzer:HdrMuxerFuzzTest",
      "fuzztest/hevchwencoderapi11_fuzzer:HevcHwEncoderApi11FuzzTest",
      "fuzztest/hevchwencodersetparameter_fuzzer:HevcHwEncoderSetParamFuzzTest",
      "fuzztest/hevcswdecoderconfigure_fuzzer:HevcSwdecoderConfigureFuzzTest",
      "fuzztest/hevcswdecoderserver_fuzzer:HevcSwdecoderServerFuzzTest",
      "fuzztest/hevcswdecoderservermemrecycle_fuzzer:HevcSwdecoderServerMemrecycleFuzzTest",
      "fuzztest/hevcswdecoderservernormal_fuzzer:HevcSwdecoderServerNormalFuzzTest",
      "fuzztest/hevcswdecoderserversurface_fuzzer:HevcSwdecoderServerSurfaceFuzzTest",
      "fuzztest/hevcswdecodersetparameter_fuzzer:HevcSwdecoderSetParameterFuzzTest",
      "fuzztest/hwavcdecoderserver_fuzzer:HwavcdecoderServerFuzzTest",
      "fuzztest/hwavcencoderserver_fuzzer:HwavcencoderServerFuzzTest",
      "fuzztest/hwhevcdecoderserver_fuzzer:HwhevcdecoderServerFuzzTest",
      "fuzztest/hwhevcencoderserver_fuzzer:HwhevcencoderServerFuzzTest",
      "fuzztest/hwvvcdecoderserver_fuzzer:HwvvcdecoderServerFuzzTest",
      "fuzztest/hwdecoder_fuzzer:HwdecoderFuzzTest",
      "fuzztest/hwdecoderapi10h26510bit_fuzzer:HwdecoderAPI10H26510BitFuzzTest",
      "fuzztest/hwdecoderapi10h2658bit_fuzzer:HwdecoderAPI10H2658BitFuzzTest",
      "fuzztest/hwdecoderapi10hdr2sdr_fuzzer:HwdecoderAPI10Hdr2SdrFuzzTest",
      "fuzztest/hwdecoderapi11_fuzzer:HwdecoderApi11FuzzTest",
      "fuzztest/hwdecoderapi11h26510bit_fuzzer:HwdecoderAPI11H26510BitFuzzTest",
      "fuzztest/hwdecoderapi11h2658bit_fuzzer:HwdecoderAPI11H2658BitFuzzTest",
      "fuzztest/hwdecoderapi11hdr2sdr_fuzzer:HwdecoderAPI11Hdr2SdrFuzzTest",
      "fuzztest/hwdecoderdrm_fuzzer:HwdecoderDrmFuzzTest",
      "fuzztest/mediademuxer_fuzzer:MediaDemuxerFuzzTest",
      "fuzztest/mediademuxerptsfunctions_fuzzer:MediaDemuxerPtsFunctionsFuzzTest",
      "fuzztest/mpeg2swdecoderconfigure_fuzzer:Mpeg2SwdecoderConfigureFuzzTest",
      "fuzztest/mpeg2swdecoderresource_fuzzer:Mpeg2SwdecoderResourceFuzzTest",
      "fuzztest/mpeg2swdecoderserver_fuzzer:Mpeg2SwdecoderServerFuzzTest",
      "fuzztest/mpeg2swdecodersetparameter_fuzzer:Mpeg2SwdecoderSetParameterFuzzTest",
      "fuzztest/mpeg4swdecoderconfigure_fuzzer:Mpeg4SwdecoderConfigureFuzzTest",
      "fuzztest/mpeg4swdecoderresource_fuzzer:Mpeg4SwdecoderResourceFuzzTest",
      "fuzztest/mpeg4swdecoderserver_fuzzer:Mpeg4SwdecoderServerFuzzTest",
      "fuzztest/mpeg4swdecodersetparameter_fuzzer:Mpeg4SwdecoderSetParameterFuzzTest",
      "fuzztest/msvideo1decoderconfigure_fuzzer:MsVideo1decoderConfigureFuzzTest",
      "fuzztest/msvideo1decoderresource_fuzzer:MsVideo1decoderResourceFuzzTest",
      "fuzztest/msvideo1decodersetparameter_fuzzer:MsVideo1decoderSetParameterFuzzTest",
      "fuzztest/ptsandindexconversion_fuzzer:PtsAndIndexConversionFuzzTest",
      "fuzztest/referenceparser_fuzzer:ReferenceparserFuzzTest",
      "fuzztest/vc1swdecoderresource_fuzzer:Vc1SwdecoderResourceFuzzTest",
      "fuzztest/vc1swdecoderconfigure_fuzzer:Vc1SwdecoderConfigureFuzzTest",
      "fuzztest/vc1swdecodersetparameter_fuzzer:Vc1SwdecoderSetParameterFuzzTest",
      "fuzztest/softencoderapi11_fuzzer:SoftEncoderAPI11FuzzTest",
      "fuzztest/swdecoderconfigure_fuzzer:SwdecoderConfigureFuzzTest",
      "fuzztest/swdecoderresource_fuzzer:SwdecoderResourceFuzzTest",
      "fuzztest/swdecoderserver_fuzzer:SwdecoderServerFuzzTest",
      "fuzztest/swdecodersetparameter_fuzzer:SwdecoderSetParameterFuzzTest",
      "fuzztest/demuxersetdatasourcewithprobsize_fuzzer:DemuxerSetDataSourceWithProbSizeFuzzTest",
      "fuzztest/demuxergetcommentdata_fuzzer:DemuxerGetCommentDataFuzzTest",
      "fuzztest/asyncresourcecapidec_fuzzer:AsyncResourceCapiDecFuzzTest",
      "fuzztest/asyncresourcecapienc_fuzzer:AsyncResourceCapiEncFuzzTest",
      "fuzztest/sync_fuzzer:SyncFuzzTest",
      "fuzztest/syncresourcecapidec_fuzzer:SyncResourceCapiDecFuzzTest",
      "fuzztest/syncresourcecapienc_fuzzer:SyncResourceCapiEncFuzzTest",
      "fuzztest/syncdecoder_fuzzer:SyncDecoderFuzzTest",
      "fuzztest/syncdecoderconfig_fuzzer:SyncDecoderConfigFuzzTest",
      "fuzztest/syncencoder_fuzzer:SyncEncoderFuzzTest",
      "fuzztest/syncencoderconfig_fuzzer:SyncEncoderConfigFuzzTest",
      "fuzztest/hwdecoderinner_fuzzer:HwdecoderInnerFuzzTest",
      "fuzztest/hwdecoderapi11buffer10bit_fuzzer:HwdecoderApi11Buffer10BitFuzzTest",
      "fuzztest/syncdecoderbuffer10bit_fuzzer:SyncDecoderBuffer10BitFuzzTest",
      "fuzztest/http_plugin_fuzztest/hevcswdecoderserversurfacetmp_fuzzer:HevcSwdecoderServerSurfaceTmpFuzzTest",
      "fuzztest/dashmediadownloader_fuzzer:DashMediaDownloaderFuzzTest",
      "fuzztest/dashmediadownread_fuzzer:DashMediaDownReadFuzzTest",
      "fuzztest/dashmediadownselectbit_fuzzer:DashMediaDownSelectBitFuzzTest",
      "fuzztest/dashmediadownsetbit_fuzzer:DashMediaDownSetBitFuzzTest",
      "fuzztest/dashmpddownloader_fuzzer:DashMpdDownloaderFuzzTest",
      "fuzztest/http_plugin_fuzztest/hlscfg_fuzzer:HlsCfgFuzzTest",
      "fuzztest/http_plugin_fuzztest/hlsm3u8mutate_fuzzer:HlsM3u8MutateFuzzTest",
      "fuzztest/http_plugin_fuzztest/httpdownloader_fuzzer:HttpDownloaderFuzzTest",
      "fuzztest/http_plugin_fuzztest/httpdownloaderopen_fuzzer:HttpDownloaderOpenFuzzTest",
      "fuzztest/dashmediadownappuid_fuzzer:DashMediaDownAppUidFuzzTest",
      "fuzztest/http_plugin_fuzztest/dashmediadownseektotime_fuzzer:DashMediaDownSeekToTimeFuzzTest",
      "fuzztest/dashmpddownfinished_fuzzer:DashMpdDownFinishedFuzzTest",
      "fuzztest/hlstagsattronly_fuzzer:HlsTagsAttrOnlyFuzzTest",
      "fuzztest/http_plugin_fuzztest/dashmediadownloader2_fuzzer:DashMediaDownloader2FuzzTest",
      "fuzztest/http_plugin_fuzztest/mpdparserthird_fuzzer:MpdParserThirdFuzzTest",
      "fuzztest/http_plugin_fuzztest/mpdparserseven_fuzzer:MpdParserSevenFuzzTest",
      "fuzztest/http_plugin_fuzztest/dashmediadownfinished_fuzzer:DashMediaDownFinishedFuzzTest",
      "fuzztest/demuxervobapi11_fuzzer:DemuxerVopAPI11FuzzTest",
      "fuzztest/demuxer3g2api11_fuzzer:Demuxer3g2API11FuzzTest",
      "fuzztest/demuxer3gpapi11_fuzzer:Demuxer3gpAPI11FuzzTest",
      "fuzztest/demuxerwmvapi11_fuzzer:DemuxerWmvAPI11FuzzTest",
      "fuzztest/demuxerm4vapi11_fuzzer:DemuxerM4vAPI11FuzzTest",
    ]
    if(av_codec_enable_codec_eac3) {
      deps += [ "fuzztest/audiodecodereac3_fuzzer:AudioDecoderEac3FuzzTest" ]
    }
  }
}

group("video_codec_unit_test") {
  testonly = true
  deps = []
  if (!use_libfuzzer) {
    if (av_codec_support_test) {
      deps += [
        "unittest/video_test/avcodec_info_test:codeclist_avcodec_info_unit_test",
        "unittest/video_test/codec_param_checker_test:video_codec_param_checker_test",
        "unittest/video_test/codeclist_test:codeclist_capi_unit_test",
        "unittest/video_test/codeclist_test:codeclist_inner_unit_test",
        "unittest/video_test/codeclist_test/coverage_unit_test:codeclist_coverage_unit_test",
        "unittest/video_test/dfx_test:video_codec_dfx_test",
        "unittest/video_test/drm_decryptor_test:drm_decryptor_coverage_unit_test",
        "unittest/video_test/event_manager_unit_test:video_event_manager_coverage_unit_test",
        "unittest/video_test/fcodec_test:videodec_fcodec_capi_unit_test",
        "unittest/video_test/fcodec_test:videodec_mjpeg_unit_test",
        "unittest/video_test/key_type_test:video_codec_key_type_test",
        "unittest/video_test/sa_avcodec_test:video_sa_avcodec_unit_test",
        "unittest/video_test/vcodec_framework_test:vcodec_framework_test",
        "unittest/video_test/vcodec_server_test:codec_server_test",
        "unittest/video_test/avcencoder_test:video_avcencoder_coverage_unit_test",
      ]
    }
  }
}
